# vqa-e2e

./: .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
tests/: test_model.py
vqa_e2e/: client.py  model.py  server.py  start_services.sh  test.py
