[tool.poetry]
name = "vqa-e2e"
version = "0.1.0"
description = ""
authors = ["sam99dave <sam99dave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"
sentencepiece = "^0.1.99"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
protobuf = "^4.25.1"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.9.0"}
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
